syntax = "proto3";

package armydevice;

import "google/protobuf/timestamp.proto";

option go_package = "./armydevice";

service ArmyDevice {
  rpc GetArmyDeviceInfo(Empty) returns (stream AddResponse) {}
}

message Empty {

}

message AddResponse {
  string                    session_id = 1;
  double                     frequency = 2;
  google.protobuf.Timestamp timestamp = 3;
}